--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-actioncable": "0.0.3",
-    "react-native-maps": "^0.23.0"
+    "react-native-elements": "^1.0.0-beta7",
+    "react-native-maps": "^0.23.0",
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
