--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-actioncable": "0.0.3",
+    "react-native-gifted-chat": "^0.7.1",
     "react-native-maps": "^0.23.0"
   },
   "devDependencies": {
