--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-native-gifted-chat": "^0.7.1",
     "react-native-maps": "^0.23.0",
     "react-native-nav": "^2.0.2",
+    "react-navigation": "^3.0.9",
     "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
