--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.27",
+    "apollo-client": "^2.4.12",
     "expo": "^32.0.0",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
+    "react-apollo": "^2.4.1",
     "react-native": "^0.57.8",
     "react-native-actioncable": "0.0.3",
     "react-native-elements": "^0.19.1",
