--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.1.27",
     "apollo-client": "^2.4.12",
     "expo": "^32.0.0",
+    "firebase": "^5.8.2",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "prop-types": "^15.6.2",
